--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,6 @@
 @import url("utility.css");
 @import url("global.css");
 @import url("intro.css");
+@import url("project.css");
+@import url("services.css");
+@import url("contact.css");
