--- a/style/intro.css
+++ b/style/intro.css
@@ -1,8 +1,8 @@
+
 #intro{
     background-image: url("../assets/background/Background_Intro.svg");
-    background-size: contain;
+    background-size: cover;
     background-position: center;
-    text-align: center;
     margin-bottom: 60px;
 
 
@@ -35,7 +35,7 @@
     
 }
 
-#intro .container div:nth-child(1){
+#intro .container header{
     max-width: 680px;
     margin-inline: auto;
 
